# web-navigator

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  requirementsadd.txt  test_agent.py  translate_quick_test.py
rl/: run_policy.py  train_ppo.py  utils.py
rl/logs/ppo_selenium/PPO_1/: events.out.tfevents.1758523299.Keshavs-MacBook-Air-72.local.24127.0
rl/logs/ppo_selenium/PPO_2/: events.out.tfevents.1758523594.Keshavs-MacBook-Air-72.local.24384.0
rl/logs/ppo_selenium/PPO_3/: events.out.tfevents.1758523774.Keshavs-MacBook-Air-72.local.24562.0
rl_train_site/: success.html  train_page.html
src/agent/web/: __init__.py  state.py  utils.py
src/agent/web/browser/: __init__.py  config.py
src/agent/web/context/: __init__.py
src/agent/web/dom/: __init__.py  script.js  views.py
src/agent/web/history/: __init__.py  views.py
src/agent/web/prompt/: action.md  answer.md  observation.md  system.md
src/agent/web/tools/: __init__.py  views.py
src/anomaly/: anomaly_model.py  logger.py  train_anomaly.py
src/inference/: __init__.py  gemini.py  nvidia.py  open_router.py
src/nlu/: dataset_prep.py  intent_model.py  train_intent.py
src/speech/: online_transcribe.py  translate.py  voice_to_text.py
src/tool/: __init__.py  thinking.py
src/tool/registry/: __init__.py
src/vectorstore/: base.py  chromadb.py  views.py
